--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"web-vitals": "^2.1.0"
 	},
 	"scripts": {
+		"setup-production":"npm install && npm build",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
